<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="reset_password">Reset Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="message_prompt">Type Message...</string>
    <string name="e_mail">E-mail</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="do_you_really_want_to_log_out">Do You really want\n  to log out?</string>
    <string name="do_you_really_want_to_logout">Do you really want\n   to logout?</string>
    <string name="message">"   message"</string>
</resources>