<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginpage"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="359dp"
        android:layout_height="267dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logbutton" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/arrowvector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/logbutton"
        android:layout_width="308dp"
        android:layout_height="95dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/signin_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="66dp"
        android:layout_height="62dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/usericon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logbutton" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="97dp"
        android:layout_height="84dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/passwordicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <EditText
        android:id="@+id/editTexLogEmail"
        android:layout_width="206dp"
        android:layout_height="53dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="96dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logbutton"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextLogPassword"
        android:layout_width="205dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="92dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTexLogEmail" />

    <ImageButton
        android:id="@+id/logsignup"
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="676dp"
        android:background="@drawable/newuser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/reset_password"
        android:textColor="#18FFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>


